--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://www.example.com/"
+baseURL: "https://master--shimmering-elf-307184.netlify.app"
 theme: "up-business-theme"
 languageCode: "en-us"
 
