--- a/config.yaml
+++ b/config.yaml
@@ -2,14 +2,14 @@ baseURL: "https://master--shimmering-elf-307184.netlify.app"
 theme: "up-business-theme"
 languageCode: "en-us"
 
-title: "Up Business"
+title: "CollegesKart"
 
 # googleAnalytics: ""
 
 summaryLength: 20
 
 params:
-  title: "Up Business"
+  title: "CollegesKart"
   description: "We specialize in providing services to desing websites, applications, build and maintain business for customers."
   images: 
     - "images/hero-image.png"
@@ -35,7 +35,7 @@ params:
     - "trungkienspktnd@gamail.com"
     - "207.555.0119"
 
-  copyright: "© 2022 Up Business All Rights Reserved"
+  copyright: "© 2023 CollegesKart All Rights Reserved"
 
 menus:
   main:
