refactor testimonials section on the Home page

--- a/data/home/testimonials.yaml
+++ b/data/home/testimonials.yaml
@@ -3,6 +3,7 @@ id: "testimonials"
 
 content:
   title: "Testimonials"
+  text: "Discover Stories of Triumph: Real tales of success, heartfelt testimonials, and essential resources await. Dive into inspiration, guidance, and invaluable insights to fuel your educational journey. Explore success, find your path!"
 
   featured:
     image: "images/testimonials-awards.png"
