--- a/config.yaml
+++ b/config.yaml
@@ -43,26 +43,18 @@ menus:
       url: "/#hero"
       weight: 1
 
-    - name: "How we work"
-      url: "/#"
+    - name: "About us"
+      url: "/about"
       weight: 2
 
-    - name: "Our team"
-      url: "/#"
+    - name: "Colleges"
+      url: "/colleges"
       weight: 3
-
-    - name: "Pricing"
-      url: "/#"
-      weight: 4
-
-    - name: "Blog"
-      url: "/blog"
-      weight: 5
 
   buttons:
     - name: "Book a call"
       url: "/#"
-      weight: 5
+      weight: 4
       pre: "btn btn-primary text-light"
 
   footer:
@@ -70,21 +62,13 @@ menus:
       url: "/#hero"
       weight: 1
 
-    - name: "How we work"
-      url: "/#"
+    - name: "About us"
+      url: "/about"
       weight: 2
 
-    - name: "Our team"
-      url: "/#"
+    - name: "Colleges"
+      url: "/colleges"
       weight: 3
-
-    - name: "Pricing"
-      url: "/#"
-      weight: 4
-
-    - name: "Blog"
-      url: "/blog"
-      weight: 5
 
 taxonomies:
   series: "series"
