--- a/data/home/cta.yaml
+++ b/data/home/cta.yaml
@@ -2,7 +2,7 @@ enabled: true
 id: "cta"
 
 content:
-  title: "Start your business now!"
+  title: "Start your educational journey now!"
   image: "images/services-web-development.png"
   button:
     label: "Let's talk"
