sanitize the footer

--- a/config.yaml
+++ b/config.yaml
@@ -36,12 +36,11 @@ params:
 
 
   location:
-    - "3891 Ranchview Dr. Richardson, California 62639"
-    - "4517 Washington Ave. Manchester, Kentucky 39495"
+    - "Knowledge Park Greater Noida, Uttar Pradesh, India 201310"
 
   contact:
-    - "trungkienspktnd@gamail.com"
-    - "207.555.0119"
+    - "collegescart@gmail.com"
+    - "+91 8076849550"
 
   copyright: "© 2023 CollegesKart All Rights Reserved"
 
