--- a/data/home/testimonials.yaml
+++ b/data/home/testimonials.yaml
@@ -4,13 +4,17 @@ id: "testimonials"
 content:
   title: "Testimonials"
   text: "Discover Stories of Triumph: Real tales of success, heartfelt testimonials, and essential resources await. Dive into inspiration, guidance, and invaluable insights to fuel your educational journey. Explore success, find your path!"
+  image: "images/testimonials-awards.png"
 
-  featured:
-    image: "images/testimonials-awards.png"
-    text: "CollegesKart has been my guiding light in the overwhelming world of higher education. The personalised guidance and resources helped me find the perfect program and secure scholarships. Grateful for their unwavering support!"
-    client: "Esha Gupta"
+  # featured:
+  #   image: "images/testimonials-awards.png"
+  #   text: "CollegesKart has been my guiding light in the overwhelming world of higher education. The personalised guidance and resources helped me find the perfect program and secure scholarships. Grateful for their unwavering support!"
+  #   client: "Esha Gupta"
 
   list:
+    - text: "CollegesKart has been my guiding light in the overwhelming world of higher education. The personalised guidance and resources helped me find the perfect program and secure scholarships. Grateful for their unwavering support!"
+      client: "Esha Gupta"
+
     - text: "As a parent, I was lost in the complexities of college applications. CollegesKart made it seamless! Their expertise and resources simplified the process, making my child's educational transition smooth and stress-free."
       client: "Ms. Manna Singh"
 
