fix location text and icon

--- a/config.yaml
+++ b/config.yaml
@@ -36,7 +36,7 @@ params:
 
 
   location:
-    - "Knowledge Park Greater Noida, Uttar Pradesh, India 201310"
+    - "Knowledge Park, Greater Noida, Uttar Pradesh, India 201310"
 
   contact:
     - "collegescart@gmail.com"
