change email address

--- a/config.yaml
+++ b/config.yaml
@@ -39,7 +39,7 @@ params:
     - "Knowledge Park, Greater Noida, Uttar Pradesh, India 201310"
 
   contact:
-    - "collegescart@gmail.com"
+    - "collegeskart@gmail.com"
     - "+91 8076849550"
 
   copyright: "© 2023 CollegesKart All Rights Reserved"
