--- a/data/home/testimonials.yaml
+++ b/data/home/testimonials.yaml
@@ -8,15 +8,15 @@ content:
 
   # featured:
   #   image: "images/testimonials-awards.png"
-  #   text: "CollegesKart has been my guiding light in the overwhelming world of higher education. The personalised guidance and resources helped me find the perfect program and secure scholarships. Grateful for their unwavering support!"
+  #   text: "collegeskart has been my guiding light in the overwhelming world of higher education. The personalised guidance and resources helped me find the perfect program and secure scholarships. Grateful for their unwavering support!"
   #   client: "Esha Gupta"
 
   list:
-    - text: "CollegesKart has been my guiding light in the overwhelming world of higher education. The personalised guidance and resources helped me find the perfect program and secure scholarships. Grateful for their unwavering support!"
+    - text: "collegeskart has been my guiding light in the overwhelming world of higher education. The personalised guidance and resources helped me find the perfect program and secure scholarships. Grateful for their unwavering support!"
       client: "Esha Gupta"
 
-    - text: "As a parent, I was lost in the complexities of college applications. CollegesKart made it seamless! Their expertise and resources simplified the process, making my child's educational transition smooth and stress-free."
+    - text: "As a parent, I was lost in the complexities of college applications. collegeskart made it seamless! Their expertise and resources simplified the process, making my child's educational transition smooth and stress-free."
       client: "Ms. Manna Singh"
 
-    - text: "CollegesKart doesn't just provide information; it's a mentor. Their blog posts and tools helped me navigate scholarships, making my dream college affordable. Thank you for your invaluable guidance!"
+    - text: "collegeskart doesn't just provide information; it's a mentor. Their blog posts and tools helped me navigate scholarships, making my dream college affordable. Thank you for your invaluable guidance!"
       client: "Shruti Saxena"
