change base URL of site to proper domain

--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@ markup:
     renderer:
       unsafe: true
 
-baseURL: "https://master--shimmering-elf-307184.netlify.app"
+baseURL: "https://collegeskart.info"
 theme: "up-business-theme"
 languageCode: "en-us"
 
